--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@wagmi/connectors": "^2.6.0",
+    "@web3modal/ethereum": "^2.6.0",
+    "@web3modal/react": "^2.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "viem": "^1.1.8",
+    "wagmi": "^1.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
